--- a/index.html
+++ b/index.html
@@ -9,42 +9,58 @@
 </head>
 
 <body>
-    <form id="todoForm">
-        <div class="container">
-            <div class="form-item">
-                <label for="todo">Kegiatan</label>
-                <textarea name="todo" id="inputTodo" class="inputTxt inputTodo"></textarea>
+    <div class="container">
+        <header>
+            <div class="profile">
+                <img src="assets/img/profile.jpg" alt="profile" class="profile-img">
+                <div profile-detail>
+                    <span>Edward Asparagus</span>
+                    <p>Professional Sadboy</p>
+                </div>
             </div>
-            <div class="form-item">
-                <label for="priority">Level Prioritas</label>
-                <select name="priority" id="inputPriority" class="inputTxt inputSelect">
-                    <option value="">Pilih Prioritas</option>
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
-                </select>
+            <div class="time">
+                <span id="dateWidget">Monday, August 2025</span>
+                <span id="timeWidget">00:00:00</span>
             </div>
-            <div class="form-item">
-                <label for="date">Tanggal</label>
-                <input type="date" class="inputTxt" name="date" id="inputDate">
+        </header>
+        <form id="todoForm">
+            <div class="container-form">
+                <div class="form-item">
+                    <label for="todo">Kegiatan</label>
+                    <textarea name="todo" id="inputTodo" class="inputTxt inputTodo"></textarea>
+                </div>
+                <div class="form-item">
+                    <label for="priority">Level Prioritas</label>
+                    <select name="priority" id="inputPriority" class="inputTxt inputSelect">
+                        <option value="">Pilih Prioritas</option>
+                        <option value="low">Low</option>
+                        <option value="medium">Medium</option>
+                        <option value="high">High</option>
+                    </select>
+                </div>
+                <div class="form-item">
+                    <label for="date">Tanggal</label>
+                    <input type="date" class="inputTxt" name="date" id="inputDate">
+                </div>
+                <div class="form-item">
+                    <button type="submit" id="btnAddTodo" class="btnSubmit">Add Task</button>
+                </div>
             </div>
-            <div class="form-item">
-                <button type="submit" id="btnAddTodo" class="btnSubmit">Add Task</button>
-            </div>
-        </div>
-    </form>
+        </form>
 
-    <div class="changeSectionContainer">
-        <div class="btnChangeSection">
-            <button type="button" id="btnTodoList">Todo</button> | <button type="button" id="btnDoneList">Done</button>
+        <div class="changeSectionContainer">
+            <div class="btnChangeSection">
+                <button type="button" id="btnTodoList">Todo</button> | <button type="button"
+                    id="btnDoneList">Done</button>
+            </div>
+            <h2 id="sectionTitle">Todo</h2>
+            <button type="button" id="btnDeleteAll">Hapus Semua Data</button>
         </div>
-        <h2 id="sectionTitle">Todo</h2>
-        <button type="button" id="btnDeleteAll">Hapus Semua Data</button>
+        <div id="todoList" class="todoList"></div>
+        <div id="doneList" class="doneList"></div>
+
+        <script src="/assets/js/script.js"></script>
     </div>
-    <div id="todoList" class="todoList"></div>
-    <div id="doneList" class="doneList"></div>
-
-    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
