fix style modal input todo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <div class="form-modal" id="formModal">
         <div class="form-modal-content">
-            <span class="close">&times;</span>
+            <div class="modal-header">
+                <span class="close">&times;</span>
+            </div>
             <form id="todoForm">
                 <div class="container-form">
                     <div class="form-item">
