--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Todolist</title>
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css'
-        integrity='sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=='
-        crossorigin='anonymous' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="form-modal" id="formModal">
         <div class="form-modal-content">
             <div class="modal-header">
-                <span class="close">&times;</span>
+                <span class="close"><i class="fa-solid fa-times"></i></span>
             </div>
             <form id="todoForm">
                 <div class="container-form">
@@ -48,15 +48,29 @@
             <div class="profile">
                 <img src="assets/img/profile.jpg" alt="profile" class="profile-img">
                 <div profile-detail>
-                    <span>Edward Asparagus</span>
+                    <span class="profile-name">Edward Asparagus</span>
                     <p>Professional Sadboy</p>
                 </div>
             </div>
             <div class="time">
-                <span id="dateWidget">Monday, August 2025</span>
-                <span id="timeWidget">00:00:00</span>
+                <span id="dateWidget"></span>
+                <span id="timeWidget"></span>
             </div>
         </header>
+        <div class="priority-category">
+            <div class="categories low">
+                <span class="">Low</span>
+                <p>0</p>
+            </div>
+            <div class="categories medium">
+                <span class="medium">Medium</span>
+                <p>0</p>
+            </div>
+            <div class="categories high">
+                <span class="high">High</span>
+                <p>0</p>
+            </div>
+        </div>
 
         <div class="changeSectionContainer">
             <div class="btnChangeSection">
@@ -68,7 +82,7 @@
         </div>
         <div id="todoList" class="todoList"></div>
         <div id="doneList" class="doneList"></div>
-        <button id="btnModal">Add Todo</button>
+        <button id="btnModal" class="btn-modal">Add Todo</button>
         <script src="/assets/js/script.js"></script>
     </div>
 </body>
